// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OperationsQueries findSpecPath ambigious paths will match exact matches 1`] = `
Object {
  "method": "get",
  "pathPattern": "/venues/top",
  "specPath": "debug-path-3-get",
}
`;

exports[`OperationsQueries findSpecPath ambigious paths will match parameterized path 1`] = `
Object {
  "method": "get",
  "pathPattern": "/venues/{venueId}",
  "specPath": "debug-path-5-get",
}
`;

exports[`OperationsQueries findSpecPath can match / 1`] = `
Object {
  "method": "get",
  "pathPattern": "/",
  "specPath": "debug-path-0-get",
}
`;

exports[`OperationsQueries findSpecPath will match concrete paths in set 1`] = `
Object {
  "method": "get",
  "pathPattern": "/app/hook/config",
  "specPath": "debug-path-1-get",
}
`;

exports[`OperationsQueries findSpecPath will match concrete paths with parameters set 1`] = `
Object {
  "method": "get",
  "pathPattern": "/orgs/{org}/actions/runner-groups/{runner_group_id}/repositories/{repository_id}",
  "specPath": "debug-path-2-get",
}
`;

exports[`OperationsQueries findSpecPath will match method 1`] = `
Object {
  "method": "post",
  "pathPattern": "/app/hook/config",
  "specPath": "debug-path-1-post",
}
`;
